--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "dom-to-image": "^2.6.0",
     "firebase": "^8.2.6",
     "firestore-export-import": "^0.10.0",
-    "html-to-image": "^1.3.21",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
