--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dom-to-image": "^2.6.0",
     "firebase": "^8.2.6",
     "firestore-export-import": "^0.10.0",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
